# parallels

./: README.md
lab2/: .gitignore  Makefile  README.md
lab2/results/: scaling.csv  schedule.csv
lab2/scripts/: plot.py  run_scaling.sh  run_schedule.sh
lab2/src/: parallel_v1.cpp  parallel_v2.cpp  serial.cpp
lab3/: .gitignore  README.md  REPORT_template.md
lab3/plot/: make_report.py  plot_speedup.py
lab3/task1/: CMakeLists.txt  matvec.cpp  run_benchmark.sh
lab3/task2/: CMakeLists.txt  main.cpp  server.hpp  thread_pool.hpp  verify.cpp
sine_sum/: CMakeLists.txt  README.md  gitignore
sine_sum/build_double/: CMakeCache.txt  Makefile  cmake_install.cmake  sine_sum
sine_sum/build_float/: CMakeCache.txt  Makefile  cmake_install.cmake  sine_sum
sine_sum/src/: main.cpp
src/: main.cu
